[metadata]
name = openmmtools
version = attr: openmmtools.__version__
author = SungHun Bae
author_email = sunghun.bae@gmail.com
description = scripting tool for molecular dynamics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sunghunbae/openmmtools
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = Molecular Dynamics Simulation Schrodinger Desmond
license_files = LICENSE.txt
[options]
package_dir == src
packages = find:
python_requires = >=3.8
[options.packages.find]
where = src